--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,31 +4,68 @@
     <title>Hello WebSocket</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.5.2/sockjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+    <style>
+        body {
+            background-color: #FFFFE0;
+        }
+        #messages {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+        }
+        #messages p {
+            margin: 0;
+            padding: 5px;
+            border-bottom: 1px solid #ccc;
+        }
+        #input-container {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+        }
+        #input-container input {
+            width: 100%;
+            padding: 5px;
+        }
+        #input-container button {
+            padding: 5px;
+        }
+    </style>
 </head>
 <body>
-
-    <script>
-
-        window.addEventListener('load', (e) => {
-           const socket = new SockJS('/chat')
-           const stompClient = Stomp.over(socket)
-            stompClient.connect({}, (frame) =>{
-
-                stompClient.subscribe('/topic/errors', (greeting) =>{
-                    console.log('errors: ' + greeting.body)
-                })
-                stompClient.subscribe('/topic/greetings', (greeting) =>{
-                    console.log('greetings: ' + greeting.body)
-                })
-
-                stompClient.send('/app/chat', {}, JSON.stringify({name: 'Caminho feliz!!!'}))
-                stompClient.send('/app/chat', {}, JSON.stringify({name: 'provocando um erro'}))
-
-            })
+<div id="messages"></div>
+<div id="input-container">
+    <input type="text" id="message-input">
+    <button id="send-button">Send</button>
+</div>
+<script>
+    window.addEventListener('load', (e) => {
+        const socket = new SockJS('/chat');
+        const stompClient = Stomp.over(socket);
+        stompClient.connect({}, (frame) => {
+            stompClient.subscribe('/topic/errors', (greeting) => {
+                console.log('errors: ' + greeting.body);
+                const messageElement = document.createElement('p');
+                messageElement.style.color = 'red';
+                messageElement.textContent = greeting.body;
+                document.getElementById('messages').appendChild(messageElement);
+            });
+            stompClient.subscribe('/topic/greetings', (greeting) => {
+                console.log('greetings: ' + greeting.body);
+                const messageElement = document.createElement('p');
+                messageElement.textContent = greeting.body;
+                document.getElementById('messages').appendChild(messageElement);
+            });
+            document.getElementById('send-button').addEventListener('click', () => {
+                const message = document.getElementById('message-input').value;
+                stompClient.send('/app/chat', {}, JSON.stringify({ name: message }));
+            });
         });
-
-    </script>
-
+    });
+</script>
 </body>
-
 </html>
